# RetroGBm

./: .gitignore  Compatibility.md  README.md  RetroGBm.sln  Testing.md
.github/workflows/: msbuild.yml
Android/: build.gradle.kts  settings.gradle.kts
Android/app/: build.gradle.kts
Android/app/src/androidTest/java/com/retrogbm/android/: ExampleInstrumentedTest.kt
Android/app/src/main/: AndroidManifest.xml
Android/app/src/main/cpp/: CMakeLists.txt  JniLoader.cpp  JniLoader.h  KotlinDisplayOutputWrapper.cpp  KotlinDisplayOutputWrapper.h  KotlinNetworkOutputWrapper.cpp  KotlinNetworkOutputWrapper.h  KotlinSoundOutputWrapper.cpp  KotlinSoundOutputWrapper.h  android.cpp  native-lib.cpp
Android/app/src/main/java/com/retrogbm/: CheatsActivity.kt  DisplayOutput.kt  EmulatorActivity.kt  EmulatorWrapper.kt  HomeActivity.kt  LoggerWrapper.kt  MainActivity.kt  NetworkOutput.kt  OptionsActivity.kt  RetroGBmApp.kt  SaveStateActivity.kt  SocketClient.kt  SoundOutput.kt
Android/app/src/main/java/com/retrogbm/activities/: CheatsActivity.kt  EmulatorActivity.kt  EmulatorActivityV2.kt  HomeActivity.kt  OptionsActivity.kt  SaveStateActivity.kt  TestActivity.kt
Android/app/src/main/java/com/retrogbm/android/: MainActivity.kt
Android/app/src/main/java/com/retrogbm/composables/: EmulatorComposables.kt  OptionsCompatibles.kt  OptionsComposibles.kt  PopupComposable.kt
Android/app/src/main/java/com/retrogbm/models/: EmulatorViewModel.kt
Android/app/src/main/java/com/retrogbm/options/: OptionData.kt  OptionRepository.kt
Android/app/src/main/res/layout/: activity_main.xml
Android/app/src/main/res/menu/: game_menu.xml
Android/app/src/main/res/values/: strings.xml  themes.xml
Android/app/src/main/res/values-night/: themes.xml
Android/app/src/test/java/com/retrogbm/: TimeFormatterTests.kt
Android/gradle/wrapper/: gradle-wrapper.properties
Core/: Core.vcxproj  Core.vcxproj.filters
Core.Tests/: ApuTests.cpp  BaseCartridgeTests.cpp  BusTests.cpp  CartridgeMBC1Tests.cpp  CartridgeMBC3Tests.cpp  CartridgeMBC5Tests.cpp  CartridgeROMTests.cpp  CheatsTests.cpp  Core.Tests.vcxproj  Core.Tests.vcxproj.filters  CpuTests.cpp  DisplayTests.cpp  InstructionsAddTests.cpp  InstructionsAndTests.cpp  InstructionsCallTests.cpp  InstructionsCompareTests.cpp  InstructionsDecTests.cpp  InstructionsExtendedTests.cpp  InstructionsIncTests.cpp  InstructionsJumpTests.cpp  InstructionsLoadTests.cpp  InstructionsOrTests.cpp  InstructionsShiftTests.cpp  InstructionsSubTests.cpp  InstructionsTests.cpp  InstructionsXorTests.cpp  JoypadTests.cpp  MockCartridge.cpp  MockCartridge.h  NullDisplayOutput.cpp  NullDisplayOutput.h  NullNetworkOutput.h  NullSoundOutput.cpp  NullSoundOutput.h  PixelPipelineTests.cpp  PixelProcessorTests.cpp  PpuTests.cpp  RamTests.cpp  TimerTests.cpp
Core/Include/: Bus.h  Cartridge.h  Cpu.h  Display.h  Dma.h  Emulator.h  ExtendedInstructions.h  HighTimer.h  Instructions.h  Joypad.h  MrClock.h  Pch.h  Pipeline.h  PixelPipeline.h  PixelProcessor.h  Ppu.h  Ram.h  Timer.h
Core/Include/RetroGBm/: Apu.h  Bootrom.h  Cartridge.h  Cheats.h  Constants.h  Cpu.h  Display.h  Dma.h  Emulator.h  ExtendedInstructions.h  HighTimer.h  IDisplayOutput.h  INetworkOutput.h  Instructions.h  Joypad.h  Logger.h  Pch.h  PixelPipeline.h  PixelProcessor.h  Ppu.h  Ram.h  SaveStateHeader.h  Timer.h  md5.h
Core/Include/RetroGBm/Audio/: FrequencySweep.h  ISoundOutput.h  LengthCounter.h  Lfsr.h  PolynomialCounter.h  SoundMode1.h  SoundMode2.h  SoundMode3.h  SoundMode4.h  SoundModeBase.h  VolumeEnvelope.h
Core/Include/RetroGBm/Cartridge/: BaseCartridge.h  CartridgeMBC1.h  CartridgeMBC3.h  CartridgeMBC5.h  CartridgeROM.h
Core/Include/RetroGBm/Tcp/: TcpClient.h  TcpListener.h
Core/Source/: Apu.cpp  Bus.cpp  Cartridge.cpp  Cheats.cpp  Cpu.cpp  Display.cpp  Dma.cpp  Emulator.cpp  ExtendedInstructions.cpp  HighTimer.cpp  Instructions.cpp  Joypad.cpp  Logger.cpp  MrClock.cpp  Pch.cpp  Pipeline.cpp  PixelPipeline.cpp  PixelProcessor.cpp  Ppu.cpp  Ram.cpp  Timer.cpp
Core/Source/Audio/: FrequencySweep.cpp  LengthCounter.cpp  Lfsr.cpp  PolynomialCounter.cpp  SoundMode1.cpp  SoundMode2.cpp  SoundMode3.cpp  SoundMode4.cpp  SoundModeBase.cpp  VolumeEnvelope.cpp
Core/Source/Cartridge/: BaseCartridge.cpp  CartridgeMBC1.cpp  CartridgeMBC3.cpp  CartridgeMBC5.cpp  CartridgeROM.cpp
Core/Source/Tcp/: TcpClient.cpp  TcpClient.h  TcpListener.cpp
RetroGBm/: Main.cpp  RetroGBm.rc  RetroGBm.vcxproj  RetroGBm.vcxproj.filters  resource.h
RetroGBm/Include/: Application.h  CartridgeInfoWindow.h  MainWindow.h  Model.h  ProfileParser.h  Renderer.h  Shader.h  TileDataWindow.h  TileWindow.h  Window.h  hashpp.h  json.hpp  stb_image_write.h
RetroGBm/Include/Audio/: XAudio2Output.h
RetroGBm/Include/Networking/: WinNetworkOutput.h
RetroGBm/Include/Render/: DisplayOutput.h  RenderDevice.h  RenderShader.h  RenderTarget.h  RenderTexture.h
RetroGBm/Include/Utilities/: Utilities.h
RetroGBm/Include/Windows/: CartridgeInfoWindow.h  CheatsWindow.h  CpuRegistersWindow.h  MainWindow.h  NetworkConnectWindow.h  TileWindow.h  Window.h
RetroGBm/Resources/: Mario Tennis (U) [C][!].sav  Pokemon - Yellow Version (UE) [C][!].sav
RetroGBm/Shaders/: PixelShader.hlsl  PixelShader.hlsl.h  ShaderData.hlsli  VertexShader.hlsl  VertexShader.hlsl.h
RetroGBm/Source/: Application.cpp  CartridgeInfoWindow.cpp  Main.cpp  MainWindow.cpp  Model.cpp  ProfileParser.cpp  Renderer.cpp  Shader.cpp  TileDataWindow.cpp  TileWindow.cpp  Window.cpp  simdjson.cpp
RetroGBm/Source/Audio/: XAudio2Output.cpp
RetroGBm/Source/Networking/: WinNetworkOutput.cpp
RetroGBm/Source/Render/: DisplayOutput.cpp  RenderDevice.cpp  RenderShader.cpp  RenderTarget.cpp  RenderTexture.cpp
RetroGBm/Source/Utilities/: Utilities.cpp
RetroGBm/Source/Windows/: CartridgeInfoWindow.cpp  CheatsWindow.cpp  CpuRegistersWindow.cpp  MainWindow.cpp  NetworkConnectWindow.cpp  TileWindow.cpp  Window.cpp
android/app/src/androidTest/java/com/retrogbm/: ExampleInstrumentedTest.kt
android/app/src/test/java/com/retrogbm/: ExampleUnitTest.kt
(+11 files in other folders)
